--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ email = "ambrogifra@gmail.com"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "130 Stuart St", city = "Kingston", region = "ON", postcode = "K7L 2V9", country = "Canada", country_code = "CA"}
+address = {street = "McLaughlin Hall, 130 Stuart St", city = "Kingston", region = "ON", postcode = "K7L 2V9", country = "Canada", country_code = "CA"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
