--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -28,6 +28,11 @@
 #  url = "#featured"
 #  weight = 50
 
+#[[main]]
+#  name = "Learning"
+#  url = "courses/"
+#  weight = 30
+
 [[main]]
   name = "Contact"
   url = "#contact"
