--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
   url = "#posts"
   weight = 20
 
-#[[main]]
-#  name = "Projects"
-#  url = "#projects"
-#  weight = 30
+[[main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 30
 
 #[[main]]
 #  name = "Talks"
@@ -36,11 +36,11 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 30
+  weight = 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
   url = "media/Ambrogi_Francesco_CV.pdf"
-  weight = 40
+  weight = 50
