--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,10 +18,10 @@
   url = "#projects"
   weight = 30
 
-#[[main]]
-#  name = "Talks"
-#  url = "#talks"
-#  weight = 40
+[[main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 40
 
 #[[main]]
 #  name = "Publications"
@@ -36,11 +36,11 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 40
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
   url = "media/Ambrogi_Francesco_CV.pdf"
-  weight = 50
+  weight = 60
